--- a/frontend/src/app/utilities/variables.scss
+++ b/frontend/src/app/utilities/variables.scss
@@ -2,3 +2,4 @@ $font-color: #616159;
 $delete-color: #961c14;
 $background-color: #fafafa;
 $close-delete-icon-color: #ab1818;
+$button-color-1: #f7f6e6;
