--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -6,15 +6,102 @@
       przepisy
     </p>
   </div>
-  <!-- <div>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-    <p>asdasdsaasas</p>
-  </div> -->
+  <div class="cards-section">
+    <mat-card class="cards-section__card row">
+      <div
+        class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
+      >
+        <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <p class="description__subheader">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
+          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
+          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
+          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
+          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
+          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
+          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
+          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
+          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
+          auctor eu.
+        </p>
+      </div>
+      <img
+        class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
+        src="/assets/accounts.png"
+      />
+    </mat-card>
+    <mat-card class="cards-section__card row">
+      <img
+        class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
+        src="/assets/accounts.png"
+      />
+      <div
+        class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
+      >
+        <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <p class="description__subheader">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
+          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
+          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
+          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
+          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
+          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
+          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
+          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
+          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
+          auctor eu.
+        </p>
+      </div>
+    </mat-card>
+    <mat-card class="cards-section__card row">
+      <div
+        class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
+      >
+        <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <p class="description__subheader">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
+          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
+          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
+          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
+          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
+          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
+          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
+          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
+          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
+          auctor eu.
+        </p>
+      </div>
+      <img
+        class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
+        src="/assets/accounts.png"
+      />
+    </mat-card>
+    <mat-card class="cards-section__card row">
+      <img
+        class="cards-section__card--image col-lg-6 col-md-12 col-sm-12"
+        src="/assets/accounts.png"
+      />
+      <div
+        class="cards-section__card--description col-lg-5 col-md-12 col-sm-12"
+      >
+        <h2 class="description__header">Załóż bezpłatne konto</h2>
+        <p class="description__subheader">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio
+          aenean sed adipiscing diam donec. At ultrices mi tempus imperdiet. Sed
+          ullamcorper morbi tincidunt ornare massa eget egestas. Tincidunt
+          praesent semper feugiat nibh. Eu feugiat pretium nibh ipsum consequat
+          nisl. Ornare aenean euismod elementum nisi quis eleifend quam
+          adipiscing vitae. Tempus imperdiet nulla malesuada pellentesque elit
+          eget. Dictum at tempor commodo ullamcorper a lacus. Duis tristique
+          sollicitudin nibh sit amet. Id nibh tortor id aliquet. At tempor
+          commodo ullamcorper a. In nisl nisi scelerisque eu ultrices vitae
+          auctor eu.
+        </p>
+      </div>
+    </mat-card>
+  </div>
 </div>
