--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -11,6 +11,8 @@
   background-attachment: fixed;
   width: 100vw;
   height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .main-section {
@@ -27,11 +29,62 @@
     font-size: 47px;
     font-weight: bolder;
     line-height: 1;
+    padding: 0 20px;
   }
 
   .main-section__subheader {
     font-size: 23px;
     font-weight: bolder;
+    padding: 0 20px;
+  }
+}
+
+.cards-section {
+  width: 100%;
+  height: auto;
+  background-color: $background-color;
+  color: $font-color;
+  -webkit-box-shadow: 0px -24px 34px 0px rgba(250, 250, 250, 1);
+  -moz-box-shadow: 0px -24px 34px 0px rgba(250, 250, 250, 1);
+  box-shadow: 0px -24px 34px 0px rgba(250, 250, 250, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .cards-section__card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 75%;
+    margin: 20px 0;
+
+    .cards-section__card--image {
+      width: 500px;
+      height: 400px;
+    }
+  }
+}
+
+.description__header {
+  font-weight: 500;
+  color: $font-color;
+}
+
+.description__header {
+  font-size: 25px;
+  font-weight: 600;
+  color: $font-color;
+}
+
+@media (max-width: 1200px) {
+  .cards-section {
+    .cards-section__card {
+      .cards-section__card--image {
+        width: 400px;
+        height: 300px;
+      }
+    }
   }
 }
 
@@ -45,6 +98,25 @@
       font-size: 20px;
     }
   }
+  .cards-section {
+    .cards-section__card {
+      .cards-section__card--image {
+        width: 600px;
+        height: 450px;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .cards-section {
+    .cards-section__card {
+      .cards-section__card--image {
+        width: 500px;
+        height: 350px;
+      }
+    }
+  }
 }
 
 @media (max-width: 576px) {
@@ -55,6 +127,31 @@
 
     .main-section__subheader {
       font-size: 15px;
+    }
+  }
+
+  .cards-section {
+    .cards-section__card {
+      .cards-section__card--image {
+        width: 400px;
+        height: 250px;
+      }
+    }
+  }
+}
+
+@media (max-width: 380px) {
+  .description__header,
+  .description__header {
+    text-align: center;
+  }
+
+  .cards-section {
+    .cards-section__card {
+      .cards-section__card--image {
+        width: 300px;
+        height: 175px;
+      }
     }
   }
 }
