--- a/frontend/src/app/components/schedule/add-other-meal-to-schedule/add-other-meal-to-schedule.component.html
+++ b/frontend/src/app/components/schedule/add-other-meal-to-schedule/add-other-meal-to-schedule.component.html
@@ -3,7 +3,7 @@
   <div class="form__input-container">
     <mat-form-field appearance="outline" class="form__input">
       <mat-label>Nazwa posiłku</mat-label>
-      <input matInput formControlName="mealName" maxlength="25" required />
+      <input matInput formControlName="snackName" maxlength="25" required />
       <mat-error>To pole jest wymagane.</mat-error>
     </mat-form-field>
   </div>
