--- a/frontend/src/app/utilities/variables.scss
+++ b/frontend/src/app/utilities/variables.scss
@@ -3,3 +3,4 @@ $delete-color: #961c14;
 $background-color: #fafafa;
 $close-delete-icon-color: #ab1818;
 $button-color-1: #f7f6e6;
+$navbar-background-color: #f7f6e6;
