--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
@@ -7,12 +7,6 @@ span {
   color: $font-color;
 }
 
-h2 {
-  margin: 0;
-  margin-bottom: 5px;
-  font-weight: 600;
-}
-
 mat-checkbox {
   display: flex;
   align-items: center;
@@ -42,6 +36,22 @@ mat-checkbox {
   width: 95%;
   height: auto;
   margin-bottom: 25px;
+}
+
+.parallelogram-header {
+  width: 100%;
+  height: 45px;
+  margin-bottom: 5px;
+  transform: skew(-40deg);
+  background-color: rgba($color: $navbar-background-color, $alpha: 0.3);
+
+  h2 {
+    margin: 0;
+    font-weight: 600;
+    padding-left: 20px;
+    padding-top: 5px;
+    transform: skew(40deg);
+  }
 }
 
 .image-container {
@@ -79,7 +89,7 @@ mat-checkbox {
 }
 
 .detail-container {
-  padding: 15px 60px;
+  padding: 15px 50px;
 
   .detail-container__name {
     margin: 0;
@@ -119,10 +129,27 @@ mat-checkbox {
       margin-left: auto;
     }
   }
+
+  .detail-container__chips {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 25px;
+  }
+
+  .detail-container__chip {
+    width: 45%;
+    text-align: center;
+    border-radius: 20%;
+    background-color: rgba($color: $navbar-background-color, $alpha: 0.5);
+    padding: 10px 5px;
+    margin: 0 5px;
+    font-weight: 500;
+  }
 }
 
 .products-container {
-  padding: 15px 40px;
+  padding: 25px 40px;
 
   .products-container__product {
     padding: 0;
@@ -175,6 +202,13 @@ mat-checkbox {
 }
 
 @media (max-width: 992px) {
+  .parallelogram-header {
+    h2 {
+      padding: 0;
+      text-align: center;
+    }
+  }
+
   .image-container {
     margin-bottom: 20px;
 
