--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -99,6 +99,12 @@
             </button>
           </div>
         </div>
+        <p
+          class="app-products__card--products-delete-all"
+          (click)="deleteAllUserProducts()"
+        >
+          Usuń wszystkie
+        </p>
       </div>
     </div>
   </mat-card>
