--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
@@ -107,6 +107,10 @@ mat-checkbox {
       width: 30%;
       display: flex;
       align-items: center;
+
+      mat-icon {
+        color: $font-color;
+      }
     }
   }
 
