--- a/frontend/src/app/components/recipes/add-recipe-to-schedule/add-recipe-to-schedule.component.scss
+++ b/frontend/src/app/components/recipes/add-recipe-to-schedule/add-recipe-to-schedule.component.scss
@@ -5,6 +5,8 @@ $font-color: #616159;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-y: hidden;
+  overflow-x: hidden;
 
   .app-add-recipe-to-schedule__container--error {
     text-align: center;
@@ -50,6 +52,15 @@ $font-color: #616159;
     margin: 0;
     color: $font-color;
   }
+
+  .app-add-recipe-to-schedule__container--inputs {
+    padding-top: 15px;
+  }
+
+  .app-add-recipe-to-schedule__container--time-input,
+  .app-add-recipe-to-schedule__container--checkbox {
+    padding: 0 10px;
+  }
 }
 
 .app-add-recipe-to-schedule__buttons {
@@ -59,5 +70,16 @@ $font-color: #616159;
 
   .app-add-recipe-to-schedule__buttons--cancel {
     color: #961c14;
+  }
+}
+
+@media (max-width: 600px) {
+  .app-add-recipe-to-schedule__container {
+    .app-add-recipe-to-schedule__container--time-input,
+    .app-add-recipe-to-schedule__container--checkbox {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
