added updating user products after add to schedule

--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -7,6 +7,7 @@
         [alt]="recipe.name"
       />
       <button
+        *ngIf="userIsAuthenticated"
         (click)="openAddtoScheduleDialog('0ms', '0ms')"
         class="image-container__button"
         mat-button
