--- a/frontend/src/app/components/recipes/add-recipe-to-schedule/add-recipe-to-schedule.component.html
+++ b/frontend/src/app/components/recipes/add-recipe-to-schedule/add-recipe-to-schedule.component.html
@@ -14,10 +14,19 @@
     <mat-button-toggle value="dinner">Kolacja</mat-button-toggle>
   </mat-button-toggle-group>
   <span
-    *ngIf="typeOfMealIsChosen"
+    *ngIf="
+      typeOfMealIsChosen &&
+      (typeOfMeal.value === 'breakfast' ||
+        typeOfMeal.value === 'secondBreakfast' ||
+        typeOfMeal.value === 'lunch' ||
+        typeOfMeal.value === 'tea' ||
+        typeOfMeal.value === 'dinner') &&
+      schedule[typeOfMeal.value].recipeId
+    "
     class="app-add-recipe-to-schedule__container--error"
-    >Do wybranej pory posiłku jest już przypisany przepis, czy chcesz go
-    nadpisać?</span
+    >Do wybranej pory posiłku jest już przypisany przepis "{{
+      schedule[typeOfMeal.value].recipeName
+    }}", czy chcesz go nadpisać?</span
   >
   <div class="app-add-recipe-to-schedule__container--inputs">
     <mat-form-field
@@ -28,7 +37,9 @@
       <input matInput [formControl]="mealTime" type="time" required />
       <mat-error>To pole jest wymagane.</mat-error>
     </mat-form-field>
-    <mat-checkbox class="app-add-recipe-to-schedule__container--checkbox"
+    <mat-checkbox
+      class="app-add-recipe-to-schedule__container--checkbox"
+      (change)="setUpdateUserProducts()"
       >Zaktualizować produkty?</mat-checkbox
     >
   </div>
