added confirm delete from schedule

--- a/frontend/src/app/components/recipes/add-recipe-to-schedule/add-recipe-to-schedule.component.html
+++ b/frontend/src/app/components/recipes/add-recipe-to-schedule/add-recipe-to-schedule.component.html
@@ -26,8 +26,8 @@
     class="app-add-recipe-to-schedule__container--error"
     >Do wybranej pory posiłku jest już przypisany przepis "{{
       schedule[typeOfMeal.value].recipeName
-    }}", czy chcesz go nadpisać?</span
-  >
+    }}". Nadpisując go utracisz produkty, czy chcesz kontynuować?
+  </span>
   <div class="app-add-recipe-to-schedule__container--inputs">
     <mat-form-field
       class="app-add-recipe-to-schedule__container--time-input"
